# BasedGUI

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  setup.sh
libs/: CMakeLists.txt
res/shaders/: fragShader.glsl  vertRotation.glsl  vertScale.glsl  vertShader.glsl  vertTranslate.glsl
src/: FileUtils.cpp  LogUtils.cpp  LogUtils.h  Renderer.cpp  Renderer.h  ShaderConsts.h  main.cpp
src/consts/: ShaderConsts.cpp  ShaderConsts.h
src/renderer/: Renderer.cpp  Renderer.h
src/utils/: FileUtils.h
